--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -55,7 +55,7 @@ body {
 	font-family: 'Jura', sans-serif;
 	background: radial-gradient(118.69% 112.81% at 3.24% 70.12%, #d32cc893 0%, rgba(0, 0, 0, 0) 100%);
 	height: 100vh;
-	overflow: clip;
+	overflow-x: clip;
 	&.locked {
 		overflow-y: hidden;
 		touch-action: none;
